# Ajo-Go

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  TEST_PLAN.md  ajogo.db  ajogo.py  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: test.yml
WhatsApp/Chats/: WhatsApp Chat - 500k monthly_chat.txt  WhatsApp Chat - 50k_500k (Sept_June)_chat.txt  WhatsApp Chat - Sunday 10k_chat.txt
api/: .test_plan_coverage  main.py  pyproject.toml  requirements.txt
api/app/api/: __init__.py  contributions.py  cron.py  groups.py  members.py  payouts.py  whatsapp_import.py
api/app/core/: auth.py
api/app/db/: database.py  models.py
api/app/services/: payout_service.py  whatsapp_parser.py
api/db/: schema.sql
api/e2e/: test_payout_cycle.py  test_whatsapp_import.py
api/tests/: conftest.py  test_api_groups.py  test_auth.py  test_contributions.py  test_payout_service.py  test_reminders.py  test_whatsapp_parser.py
apps/: admin.py
apps/migrations/: 0001_initial.py  0002_savingsgroup_groupmembers.py  0003_rename_groupmembers_groupmember_and_more.py  0004_contribution_payout_reminderrule_reminderstate.py  (+1 more)
convert3D/: d-b.sqlite3
migrations/: 0001_initial.py  0002_alter_admin_options_alter_contribution_options_and_more.py  0003_alter_contribution_options_alter_group_options.py  0004_alter_admin_options_alter_group_options.py  0005_alter_member_options.py  0006_post.py  0006_savingsgroup_remove_group_admin_customuser_and_more.py  0007_alter_contribution_options.py  0008_alter_contribution_options.py
nano/: admin.py  models.py
(+16 files in other folders)
