[project]
name = "ajogo-api"
version = "0.1.0"
description = "AjoGo — Digital Savings & Thrift Platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "supabase>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pydantic>=2.0.0",
    "twilio>=9.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests", "e2e"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py311"
line-length = 88
